<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddTodoActivity"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:padding="@dimen/margin_10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:text="@string/new_todo"
            android:textColor="@color/white"
            android:padding="@dimen/margin_10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:hint="@string/title"
            android:padding="@dimen/margin_10dp"
            android:imeOptions="actionNext"
            android:textColor="@color/colorAccent"
            android:background="@drawable/edit_bg"
            android:textColorHint="@color/colorPrimary"
            android:layout_margin="@dimen/margin_10dp"/>
        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:imeOptions="actionDone"
            android:textColor="@color/colorAccent"
            android:hint="@string/desc"
            android:padding="@dimen/margin_10dp"
            android:background="@drawable/edit_bg"
            android:textColorHint="@color/colorPrimary"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_10dp"
            android:gravity="start" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_10dp">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="@dimen/margin_5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_margin="@dimen/margin_5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</layout>